[package]
name = "jwt-shark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = "4.5.13"
hmac = "0.12"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.122"
